[package]
name = "libskills-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for LibSkills — Behavioral Knowledge Layer for Open-Source Libraries"
license = "Apache-2.0"
repository = "https://github.com/LibSkills/libskills-protocol"

[[bin]]
name = "libskills-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
